Test Driven Development

--- a/.env.local
+++ b/.env.local
@@ -4,5 +4,5 @@ MYSQL_PASSWORD: secret
 MYSQL_DATABASE: docker-php
 REDIS_PORT: 6379
 BUILD_TARGET: app_dev
-XDEBUG_MODE: debug
+#XDEBUG_MODE: debug
 X_API_KEY: AAAAAAAAAAAAAAAAAAAAAGag0gEAAAAAVGdC9zT%2F6xXFEEXF3H%2FLZGfzmvY%3Dv7HfRvRvXJCMRgqbQtHIqdhMlpsf3YWykLW610D6KV9RMpfWg7
