--- a/app/composer.json
+++ b/app/composer.json
@@ -16,7 +16,8 @@
   "require": {
     "symfony/http-client": "^5.4 || ^6.2",
     "doctrine/orm": "^2.10",
-    "symfony/cache": "^5.4 || ^6.2"
+    "symfony/cache": "^5.4 || ^6.2",
+    "guzzlehttp/guzzle": "^7.9"
   },
   "scripts": {
     "run-phpunit": "vendor/bin/phpunit"
