--- a/app/composer.json
+++ b/app/composer.json
@@ -1,7 +1,11 @@
 {
   "require-dev": {
     "phpunit/phpunit": "^9.5 || ^10.0",
-    "symfony/var-dumper": "^5.4 || ^6.0"
+    "symfony/var-dumper": "^5.4 || ^6.0",
+    "phpstan/phpstan": "^2.1",
+    "phpstan/extension-installer": "^1.4",
+    "phpstan/phpstan-beberlei-assert": "^2.0",
+    "phpstan/phpstan-doctrine": "^2.0"
   },
   "autoload": {
     "psr-4": {
@@ -21,5 +25,10 @@
   },
   "scripts": {
     "run-phpunit": "vendor/bin/phpunit"
+  },
+  "config": {
+    "allow-plugins": {
+      "phpstan/extension-installer": true
+    }
   }
 }
